# mockframe

./: .gitignore  README.md  pyproject.toml
examples/: example.py
mockframe/: __init__.py  core.py  provider.py
tests/: test_frame.py
